v3/crates/metadata-resolve/tests/failing/commands/two_errors/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/commands/two_errors/metadata.json
---
Error: the argument 'argument_with_unknown_type' in command 'function_with_unknown_argument_type (in subgraph default)' has an unknown type: MissingThing!
    ╭─[ <unknown>:15:25 ]
    │
 14 │                 "name": "argument_with_unknown_type",
    │                         ──────────────┬─────────────  
    │                                       ╰─────────────── Command 'function_with_unknown_argument_type' has an argument 'argument_with_unknown_type'
 15 │                 "type": "MissingThing!"
    │                         ───────┬───────  
    │                                ╰───────── The argument type 'MissingThing!' has not been defined
────╯
Error: the argument 'another_argument_with_unknown_type' in command 'another_function_with_unknown_argument_type (in subgraph default)' has an unknown type: MissingThing!
    ╭─[ <unknown>:29:25 ]
    │
 28 │                 "name": "another_argument_with_unknown_type",
    │                         ──────────────────┬─────────────────  
    │                                           ╰─────────────────── Command 'another_function_with_unknown_argument_type' has an argument 'another_argument_with_unknown_type'
 29 │                 "type": "MissingThing!"
    │                         ───────┬───────  
    │                                ╰───────── The argument type 'MissingThing!' has not been defined
────╯
